--- a/css/style.css
+++ b/css/style.css
@@ -834,7 +834,7 @@ ol {
 }
 .main-ilustration-4{
     position: relative;
-    background: url(../img/core-img/head-bg-1.gif) no-repeat center 65%;
+    background: url(../img/core-img/head-bg-1.png) no-repeat center 65%;
     height: 100vh;
     background-size: cover;
 }
